# learnopengl

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
Chapter 05/Ex 1/: main.cpp
Chapter 05/Ex 2/: main  main.cpp
Chapter 05/Ex 3/: main  main.cpp
Chapter 06/: main.cpp
Chapter 06/Ex 3/: main  main.cpp
Chapter 07/: fragment.frag
Chapter 09/: main
Chapter 09/Ex 1/: main
Chapter 09/Ex 2/: fragment.frag  main  main.cpp
Chapter 10/: main  main.cpp
Chapter 10/Ex 1/: main  main.cpp
Chapter 12/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
Chapter 13/: main  main.cpp
Chapter 13/Ex 1/: fragment.frag  main  main.cpp
Chapter 13/Ex 2/: fragment.frag  main.cpp  vertex.vert
Chapter 14/: main  main.cpp
Chapter 14/Ex 1/: CMakeCache.txt  Makefile  cmake_install.cmake  fragment.frag  main  main.cpp
Chapter 15/: fragment.frag  main  main.cpp
Chapter 15/Ex 2/: fragment.frag  main  main.cpp
Chapter 15/Ex 4/: fragment.frag  main  main.cpp  vertex.vert
Chapter 16/: main
Chapter 17/: main.cpp
Chapter 17/Ex 1/: lightfragment.frag  main  main.cpp
Chapter 19/: fragment.frag  main  main.cpp
Chapter 5/: README.md  main  main.cpp
Chapter 5/Ex 1/: main
Chapter 6/: main
Chapter 6/Ex 1/: main.cpp
Chapter 6/Ex 2/: main  main.cpp
Chapter 7/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
Chapter 7/Ex 1/: CMakeCache.txt  Makefile  cmake_install.cmake  fragment.frag  main  main.cpp
Chapter 7/Ex 4/: fragment.frag  main  main.cpp  vertex.vert
Chapter 8/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
Chapter 9/: main.cpp  vertex.vert
Chapter 9/Ex 1/: main.cpp
Chapter 9/Ex 2/: CMakeCache.txt  Makefile  cmake_install.cmake
Chapter 9/Ex 3/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
glad/: glad.c  glad.h
include/: Shader.cpp  Shader.hpp
include/core/: Camera.hpp  FPSCamera.hpp  Mesh.hpp  Model.hpp  Shader.hpp  Texture.hpp
playground/cloth_sim_point_static/: fragment.frag  main  main.cpp  vertex.vert
playground/clothsim/: CMakeLists.txt  README.md  gdb.txt  imgui.ini  main.cpp
playground/clothsim/shaders/: floorfragment.frag  fragment.frag  wireframeVertex.vert
playground/clothsim/src/: Cloth.cpp  Cloth.hpp  CollidableObject.hpp  Cube.hpp  Floor.hpp  Mouse.hpp  Plane.hpp  Point.cpp  Point.hpp  Spring.cpp  Spring.hpp
playground/imgui/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini  lightfragment.frag  main  main.cpp
playground/spotlight/: OpenGLPlayground  fragment.frag  main  main.cpp
src/core/: Camera.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp
